# prod_trademarkpredictor

./: .cursorrules  .env.example  .env.yaml  .gcloudignore  .gitignore  Dockerfile  README.md  deploy.sh  env.example  main.py  pyproject.toml  requirements.txt
api/: __init__.py  main.py
examples/: predict_opposition.py
model_context/: hireable-prod_trademarkpredictor.txt  strategy.md
sft_jsonl/: goods_services_comparisons_validation.jsonl
src/: __init__.py  db.py  embeddings.py  gemini_agent_prompt.py  logger.py  main.py  models.py  similarity.py
src/tools/: __init__.py  prediction_tools.py  similarity_tools.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20250404021823_remote_schema.sql  _alter_embedding_dimension.sql
tests/: __init__.py  test_embedding.py  test_health.py  test_llm_integration.py  test_main.py  test_prediction_tools.py  test_similarity.py  test_similarity_all.py
trademark_core/: __init__.py  conceptual.py  embeddings.py  llm.py  models.py  similarity.py
